...
        <item>100 km</item>
        <item>50 km</item>
        <item>25 km</item>
        <item>10 km</item>
        <item>5 km</item>
    </string-array>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="establecer">Establecer</string>
    <string name="precio">Precio</string>
    <string name="distancia">Distancia</string>
    <string name="distanciaView">Distancia</string>

</resources>
...
