...
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/gasoleoa"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasoleoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textViewTipoGasolina" />

    </RelativeLayout>
...
